--- a/apps/main/templates/main/index.html
+++ b/apps/main/templates/main/index.html
@@ -19,6 +19,7 @@
           <label for="email"><h3>Email: <input type='text' name='email' id="email"></h3></label>
           <label for="password"><h3>Password: <input type='text' name='password' id="password"></h3></label>
           <label for="password_confirm"><h3>Confirm Password: <input type='text' name='password_confirm' id="password_confirm"></h3></label>
+          <label for="birthday"><h3>Date of Birth: <input type='text' name='birthday' id="birthday"></h3></label>
           <input type='submit' value='Submit'>
         </form>
 
