--- a/apps/main/templates/main/edit.html
+++ b/apps/main/templates/main/edit.html
@@ -19,12 +19,12 @@
         <p>
           Status:
           <select value="appointment.status" name='status'>
-            <option value="pending">Pending</option>
-            <option value="missed">Missed</option>
-            <option value="done">Done</option>
+            <option value="Pending">Pending</option>
+            <option value="Missed">Missed</option>
+            <option value="Done">Done</option>
           </select>
         </p>
-        <p>Task:</p><textarea value="{{appointment.task}}" name="task" rows="6" cols="40"></textarea>
+        <p>Task:</p><textarea name="task" rows="6" cols="40">{{appointment.task}}</textarea>
 
         <input type="submit" value = "Update">
       </form>
