--- a/apps/main/templates/main/index.html
+++ b/apps/main/templates/main/index.html
@@ -17,8 +17,8 @@
           <label for="first_name"><h3>First Name: <input type='text' name='first_name' id="first_name"></h3></label>
           <label for="last_name"><h3>Last Name: <input type='text' name='last_name' id="last_name"></h3></label>
           <label for="email"><h3>Email: <input type='text' name='email' id="email"></h3></label>
-          <label for="password"><h3>Password: <input type='text' name='password' id="password"></h3></label>
-          <label for="password_confirm"><h3>Confirm Password: <input type='text' name='password_confirm' id="password_confirm"></h3></label>
+          <label for="password"><h3>Password: <input type='password' name='password' id="password"></h3></label>
+          <label for="password_confirm"><h3>Confirm Password: <input type='password' name='password_confirm' id="password_confirm"></h3></label>
           <label for="birthday"><h3>Date of Birth: <input type='text' name='birthday' id="birthday"></h3></label>
           <input type='submit' value='Submit'>
         </form>
@@ -27,7 +27,7 @@
         <form action='/sessions' method='post'>
           {% csrf_token %}
           <label for="email"><h3>Email: <input type='text' name='email' id="email"></h3></label>
-          <label for="password"><h3>Password: <input type='text' name='password' id="password"></h3></label>
+          <label for="password"><h3>Password: <input type='password' name='password' id="password"></h3></label>
           <input type='submit' value='Submit'>
         </form>
 
